--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=bachelor2024
+spring.datasource.password=1
 
 
 spring.datasource.hikari.connectionTimeout=20000
