--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://10.38.5.19:5432/Test_bachelor
-spring.datasource.username=Gutta
-spring.datasource.password=Gutta123
+spring.datasource.url=jdbc:postgresql://localhost:5432/Test_bachelor
+spring.datasource.username=postgres
+spring.datasource.password=Bachelor1990!
 
 
 spring.datasource.hikari.connectionTimeout=20000
