--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Test_bachelor
 spring.datasource.username=postgres
-spring.datasource.password=passord
-
+spring.datasource.password=pw
 
 
 spring.datasource.hikari.connectionTimeout=20000
